Aisle and Section editing

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@capacitor/haptics": "8.0.0",
     "@capacitor/keyboard": "8.0.0",
     "@capacitor/status-bar": "8.0.0",
+    "@hookform/resolvers": "^5.2.2",
     "@ionic/react": "^8.5.0",
     "@ionic/react-router": "^8.5.0",
     "@tanstack/react-query": "^5.90.12",
@@ -27,8 +28,10 @@
     "ionicons": "^7.4.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-hook-form": "^7.69.0",
     "react-router": "^5.3.4",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@capacitor/cli": "8.0.0",
