Initial shopping list editing

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.69.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
+    "use-debounce": "^10.0.6",
     "zod": "^4.2.1"
   },
   "devDependencies": {
