--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,8 @@
 # - fake: Use in-memory fake database (useful for browser development)
 # - remote: Use remote API database (not yet implemented)
 VITE_DATABASE_TYPE=sqlite
+
+# Test Data Seeding
+# Set to 'true' to populate empty databases with sample grocery store data
+# Includes aisles, sections, store items, and a shopping list for testing
+VITE_SEED_TEST_DATA=false
