Data model fixes, better UX for checked, minor misc fixes

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,7 +12,7 @@
             }
         },
         {
-            "label": "Reset Android Emulator Database",
+            "label": "Reset Android Emulator App Data",
             "type": "shell",
             "command": "adb",
             "args": ["shell", "pm", "clear", "io.ionic.starter"],
