feat: Add option to show database reset button in settings page

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ VITE_DATABASE_TYPE=sqlite
 # Set to 'true' to populate empty databases with sample grocery store data
 # Includes aisles, sections, store items, and a shopping list for testing
 VITE_SEED_TEST_DATA=false
+
+# Settings Page Options
+# Set to 'true' to show the database reset option in the Settings page
+VITE_SHOW_DATABASE_RESET=false
