--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ondevice-shopping-assistant",
+  "name": "basket-bot",
   "private": true,
   "version": "0.0.1",
   "type": "module",
