feat: Add OpenAI API key configuration and fallback logic in settings

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,9 @@ VITE_SEED_TEST_DATA=false
 # Settings Page Options
 # Set to 'true' to show the database reset option in the Settings page
 VITE_SHOW_DATABASE_RESET=false
+
+# OpenAI API Configuration
+# Fallback API key used when no API key is configured in app settings
+# This is useful for development/testing or pre-configured deployments
+VITE_OPENAI_API_KEY=
+
