feat: Enhance store layout schema and implement bulk import improvements with validation

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "ionicons": "^7.4.0",
+    "pluralize": "^8.0.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.69.0",
@@ -42,6 +43,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
+    "@types/pluralize": "^0.0.33",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-react": "^4.0.1",
     "cypress": "^13.5.0",
