Remove shopping_list

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@capacitor-community/sqlite": "^7.0.2",
     "@capacitor/android": "8.0.0",
     "@capacitor/app": "8.0.0",
+    "@capacitor/camera": "^8.0.0",
     "@capacitor/core": "8.0.0",
     "@capacitor/haptics": "8.0.0",
     "@capacitor/keyboard": "8.0.0",
@@ -41,9 +42,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/pluralize": "^0.0.33",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
-    "@types/pluralize": "^0.0.33",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-react": "^4.0.1",
     "cypress": "^13.5.0",
