Refactor API key handling: migrate to secure storage and remove OpenAI API key references

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -37,6 +37,19 @@
                 "cwd": "${workspaceFolder}/android"
             },
             "problemMatcher": []
+        },
+        {
+            "label": "Android Emulator: Dump Last 30 Logcat Lines",
+            "type": "shell",
+            "command": "pwsh",
+            "args": [
+                "-Command",
+                "$appPid = adb shell pidof com.basketbot.app; adb logcat -d | findstr $appPid | Select-Object -Last 30"
+            ],
+            "problemMatcher": [],
+            "presentation": {
+                "reveal": "always"
+            }
         }
     ]
 }
