--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tanstack/react-query": "^5.90.12",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "capacitor-secure-storage-plugin": "^0.12.0",
     "ionicons": "^7.4.0",
     "pluralize": "^8.0.0",
     "react": "19.0.0",
