feat: Enhance shopping list functionality with idea support and shimmer animation
- Added support for "Idea" mode in ItemEditorModal, allowing users to create items without a name, using notes instead.
- Implemented mode toggle between "Item" and "Idea" with visual indicators using IonChip components.
- Updated item submission logic to handle ideas separately from regular items, including appropriate database changes.
- Introduced shimmer animation for newly imported items in ShoppingListItem to enhance user experience.
- Modified database schema to allow nullable store_item_id for ideas and added is_idea field.
- Updated bulk import functionality to mark newly imported items for shimmer animation.
- Implemented last selected store preference management to auto-navigate users to their last visited store.
- Refactored various components and hooks to accommodate new features and improve code organization.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@capacitor/core": "8.0.0",
     "@capacitor/haptics": "8.0.0",
     "@capacitor/keyboard": "8.0.0",
+    "@capacitor/preferences": "^8.0.0",
     "@capacitor/status-bar": "8.0.0",
     "@hookform/resolvers": "^5.2.2",
     "@ionic/react": "^8.5.0",
