feat: Add capacitor-community/keep-awake dependency and implement screen wake functionality during API calls
Better natural sorting

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@capacitor-community/keep-awake": "^8.0.0",
     "@capacitor-community/sqlite": "^7.0.2",
     "@capacitor/android": "8.0.0",
     "@capacitor/app": "8.0.0",
